# RaffleT

./: .prettierrc.json  Anchor.toml  README.md  package-lock.json  package.json  tsconfig.json
RaffleT_front/: index.html  styles.css
app/: index.html  package.json  vite.config.ts
app/raffle-t/: .pnp.cjs  package-lock.json  package.json
app/raffle-t/app/: layout.tsx  page.tsx
app/raffle-t/app/anchor/: idl.ts
app/raffle-t/app/components/: AnchorClient.ts  AnchorClientProvider.tsx  AppWalletProvider.tsx  Navbar.tsx  NftDashboard.tsx
app/raffle-t/app/createRaffle/: page.tsx
app/raffle-t/app/dashboard/: page.tsx
app/raffle-t/app/explore/: page.tsx
app/raffle-t/app/utils/: constants.ts  helpers.ts  program.ts
app/src/: App.css  App.tsx
app/src/components/: Header.tsx
app/src/pages/: CreateRaffle.tsx  Dashboard.tsx  Explore.tsx  Home.tsx  createRaffle.tsx  findRaffle.tsx
programs/raffle-t/: Cargo.toml
programs/raffle-t/src/: lib.rs
tests/: raffle-t.ts
